cmake_minimum_required(VERSION 3.20)
project(dasr_twelfth_sem)

set(CMAKE_CXX_STANDARD 20)

add_executable(dasr_twelfth_sem main.cpp)
add_executable(first first.cpp)
add_executable(second second.cpp)
add_executable(third third.cpp)
add_executable(fourth fourth.cpp)
add_executable(fifth fifth.cpp)
add_executable(sixth sixth.cpp)
add_executable(seventh seventh.cpp)
add_executable(eighth eighth.cpp)
add_executable(ninth ninth.cpp)
